--- a/src/containers/Home/components/TokenomicsInfo/TokenomicsInfo.scss
+++ b/src/containers/Home/components/TokenomicsInfo/TokenomicsInfo.scss
@@ -1,6 +1,6 @@
 .ti-container {
   background-color: #fcfcfc;
-  border: solid 1px rgba(151, 151, 151, 0.09);  
+  border: solid 1px rgba(151, 151, 151, 0.09);
 }
 
 .ti-content {
@@ -17,9 +17,21 @@
   padding-right: 50px;
 }
 
-.logo {
+.logo-box {
   width: 265px;
   height: 136px;
+  position: relative;
+}
+
+.logo {
+  position: absolute;
+  width: 265px;
+  height: 136px;
+
+  &:hover {
+    width: 305px;
+    height: 157px;
+  }
 }
 
 .tokenomics-txt {
@@ -46,9 +58,23 @@
 .stat-item-container {
   border-bottom: 1px solid #949292;
   display: grid;
-  grid-template-columns: 10px auto auto;
+  grid-template-columns: 10px 230px 60px;
   grid-column-gap: 10px;
   padding: 17px 0;
+  cursor: default;
+
+  &:hover {
+    .stat, .val {
+      font-weight: 800 !important;
+      font-size: 18px !important;
+    }
+
+    .dot {
+      width: 12px;
+      height: 12px;
+      border-radius: 6px;
+    }
+  }
 }
 
 .dot {
@@ -65,6 +91,7 @@
   line-height: normal;
   letter-spacing: normal;
   color: #453937;
+  cursor: default;
 }
 
 .val {
